# titan

./: .gitignore  BACKEND_COMPLETE.md  CLEANUP_REPORT.md  Dockerfile  Makefile  NEXT_STEPS.txt  QUICKSTART.md  README.md  RUN_MONKEY.txt  SYSTEM.txt  System.txt  TESTING.md  add_cors.sh  check-services.sh  debug_scheduler_config.py  debug_search.py  demo_full_system.py  demo_titan.py  diagnose.sh  docker-compose.databases.yml  docker-compose.memory.yml  docker-compose.model.yml  docker-compose.plugins.yml  docker-compose.scheduler.yml  docker-compose.yml  event_ws_bridge.py  fix_cors_auth.py  fix_scheduler.sh  goal-scheduler.Dockerfile  install_missing_deps.sh  install_ml_deps.sh  make_executable.sh  make_scripts_executable.sh  memory.Dockerfile  model-gateway.Dockerfile  plugin-manager.Dockerfile  pyproject.toml  requirements.txt  run_ml_install.sh  setup.py  (+20 more)
config/: eventbus.yaml  memory-local.yaml  memory.yaml  models.yaml  plugins-local.yaml  plugins.yaml  prometheus.yml  sentinel.conf
delete_me/: IMPLEMENTATION_SUMMARY_02062025.md  MEMORY_FIXES_COMPLETED.md  MEMORY_FIXES_README.md  PLUGIN_LOADER_SUMMARY.md  check_api.py  check_container_code.sh  check_memory_health.py  check_openapi.py  check_status.sh  clear_memories.py  evaluator.py  evaluator_lightweight.py  event_bus.py  memory_service_setup.py  plugin_manager_requirements.txt  plugin_manager_setup.py  run_demo_no_otel.sh  run_memory_test.sh  start_databases.sh  stop_titan.sh  test_circuit_breaker_v2.py  test_eventbus_integration.py  test_memory_fixes.py  test_memory_fixes_all.py  test_memory_simple.py  (+6 more)
(+140 files in other folders)
